# SimpleCircleGame

./: .editorconfig  CMakeLists.txt  README.md
.devcontainer/: Dockerfile
config/: config.txt
src/: CMakeLists.txt  entity.cpp  entitymanager.cpp  game.cpp  main.cpp  vec2.cpp
src/include/: component.h  enitiymanager.h  entity.h  game.h  vec2.h
test/: CMakeLists.txt  test_main.cpp  test_vec2.cpp
